--- a/在线简历/index.html
+++ b/在线简历/index.html
@@ -13,11 +13,11 @@
     <div class="wrap">
         <div class="nav">
             <input type="radio" name="radio-set" id="nav1" checked='checked'>
-            <a class="sign" href="#panel1">页面1</a>
+            <a class="sign" href="#panel1">首页</a>
             <input type="radio" name="radio-set" id="nav2">
-            <a class="sign" href="#panel1">页面2</a>
+            <a class="sign" href="#panel1">详细信息</a>
             <input type="radio" name="radio-set" id="nav3">
-            <a class="sign" href="#panel1">页面3</a>
+            <a class="sign" href="#panel1">项目经验</a>
             <div class="scroll">
                 <div class="firstPage Page">
                     <img src="image/headPortrait.jpeg" class="headPortrait">
